Homepage: fix vertical alignment of hero text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,6 +407,7 @@ main {
 
 /*-------------------------------Landing Page (Lessons) Hero Image*/
 .hero-image {
+    position: relative;
     height: 500px;
     width: 100%;
     background: url(../images/oliver-schwendener-9lcWCCRXiKU-unsplash) no-repeat center center;
